pfstools 2.0.0 <?>
	* added: Starting from pfstools 2.0.0, pfstmo and pfscalibration are included in the pfstools source package
	* fixed: pfsinpfm and pfsoutpfm now handle both big and little endian files correctly
	* fixed: pfsinpfm and pfsoutpfm do not flip images (top-bottom)

pfstools 1.9.0 <17.09.2014>
	* added: CMake build system (to replace automake in future releases)
	* changed: pfsinrgbe & pfsoutrgbe do not correct for Radiance WHITE_EFFICACY by default. Note that this makes absolute values stored in .hdr files using earlier pfstools version smaller then they should be. Check manual pages for pfsinrgbe.
	* added: pfsretime - simple frame duplication
	* added: pfscolortransform - color calibration
	* updated: pfsglview contains many improvement and multithreading (thanks to Oliver Barth)
	* updated: pfsview is multithreaded if openmp present
	* fixed: pfsindcraw uses sRGB rather than the native RGB color space. This should improve colors in HDR images merged from RAW.
	* fixed: bugs in pfsintiff
	* fixed: Building OSX app bundle for pfsview disabled by default (use --enable-osxapp to enable again)

pfstools 1.8.5 <21.10.2011>
	* fixed: pfsintiff normalizes 16-bit files to 0-1 range to maintain compatibility with pfscalibration and the rest of pfstools
	* fixed: when reading TIFF files, pfsin falls back to pfsinimgmagick if pfsintiff not found
	* fixed: pfsout tries first pfsoutimgmagic when writing TIFF images

pfstools 1.8.4 <20.05.2011>
	* fixed: SegFault from pfsview when switching channels
	* fixed: quoted arguments in pfsin/pfsout/pfsv/pfsindcraw/pfsinmulti (fixes bug 3279342)

pfstools 1.8.3 <23.03.2011>
	* fixed: pfsdisplayfunction properly interpolates display LUT
	* fixed: bug #3080304 - configure uses non-portable test(1) syntax
	* fixed: bug #1766263 - pfsinhdrgen fails silently on pfsin failure. - partially
	* fixed: pfsview the entire code converted from qt3 to qt4 (fixes bug #3127946)
	* fixed: "Fit window to content" works again in pfsview