@@ -2,15 +2,16 @@ The project is currently maintained by:
 
 Rafal Mantiuk <mantiuk@gmail.com>
 
-Multiple people contributed to the project, including:
+Multiple people contributed to the project, including (in arbitrary order):
 
 Grzegorz Krawczyk <krawczyk@mpi-sb.mpg.de>
 Miloslaw Smyk <thorgal@wfmh.org.pl>
+Ivo Ihrke <ihrke@mmci.uni-saarland.de>
 Alexander Efremov <aefremov@mpi-sb.mpg.de>
 Dorota Zdrojewska <dzdrojewska@wi.ps.pl>
 Jan Otop <jotop@mpi-sb.mpg.de>
 Christian Bloch <Blochi@edenfx.com> (Improved templates for HDR-HTML in src/hdthtml/hdrhtml_hdrlabs_templ)
-Radoslaw Mantiuk
+Radoslaw Mantiuk  <rmantiuk@wi.ps.pl> 
 Oliver Barth
 Delvin Varghese
 Hugo Brito Lima
