@@ -1,7 +1,8 @@
-Bugs and todo items:
+Some planned changes
 
-* Improve matlab interface
-* Better color handling in the pfs library
+* pfsview should use OpenGL and GLSL for better performance
+* Add support for ICC color profiles (litecms)
+* pfssize should use better filters when downsizing
 * Performance improvements:
    * Shared memory instead of pipes
    * "Lazy" color space transform
