@@ -61,20 +61,24 @@ FIND_PATH(OPENEXR_INCLUDE_DIR
     include/OpenEXR include
 )
 
+#message( "Include dir: ${OPENEXR_INCLUDE_DIR}" )
+
 SET(_openexr_LIBRARIES)
 FOREACH(COMPONENT ${_openexr_FIND_COMPONENTS})
   STRING(TOUPPER ${COMPONENT} UPPERCOMPONENT)
 
   FIND_LIBRARY(OPENEXR_${UPPERCOMPONENT}_LIBRARY
     NAMES
-      ${COMPONENT} ${COMPONENT}-2.1
+      ${COMPONENT} ${COMPONENT}-2.1 ${COMPONENT}-2.2 ${COMPONENT}-2_1 ${COMPONENT}-2_2
     HINTS
       ${_openexr_SEARCH_DIRS}
     PATH_SUFFIXES
       lib64 lib
     )
-  
-#  IF( NOT ${OPENEXR_${UPPERCOMPONENT}_LIBRARY} )
+
+#  message( "Lib: ${OPENEXR_${UPPERCOMPONENT}_LIBRARY}" )
+
+#  IF( NOT "${OPENEXR_${UPPERCOMPONENT}_LIBRARY}" )
 #	message( "Library ${COMPONENT} not found" )
 #	SET( OPENEXR_FOUND "" )
 #	break()
