@@ -1,7 +1,10 @@
-pfstools 2.0.0 <?>
+pfstools 2.0.0 <06.12.2014>
 	* added: Starting from pfstools 2.0.0, pfstmo and pfscalibration are included in the pfstools source package
+	* changed: support for automake dropped in favour of cmake
 	* fixed: pfsinpfm and pfsoutpfm now handle both big and little endian files correctly
 	* fixed: pfsinpfm and pfsoutpfm do not flip images (top-bottom)
+	* added: new tone-mapping operator: pfstmo_mai11
+	* changed: Thoroughly updated README files
 
 pfstools 1.9.0 <17.09.2014>
 	* added: CMake build system (to replace automake in future releases)
